<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:alwaysDrawnWithCache="false"
    android:animateLayoutChanges="false"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/reset"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginBottom="152dp"
        android:onClick="resetCount"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="199dp"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/mainText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/MyButton"
        android:layout_width="208dp"
        android:layout_height="226dp"
        android:onClick="addOneToNum"
        android:text="@string/_0"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sayingOfDay"
        app:layout_constraintVertical_bias="0.034"
        app:rippleColor="@color/purple_500" />

    <Button
        android:id="@+id/button2"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:onClick="showAbout"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyButton"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/sayingOfDay"
        android:layout_width="403dp"
        android:layout_height="86dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/saying_of_day"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>